k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-media-scrapper-deployment
  namespace: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: social-media-scrapper
  template:
    metadata:
      labels:
        app: social-media-scrapper
    spec:
      containers:
        - name: social-media-scrapper
          image: docker.io/tdksoft341/social-media-dashboard:7d63b36029ed48285eb99eb6b37794ad3e659224
          ports:
            - containerPort: 8501
