k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-media-scrapper-ingress
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: social-media.178.254.23.139.nip.io
    http:
      paths:
      - path: /sm-scrapper
        pathType: Prefix
        backend:
          service:
            name: social-media-scrapper-service
            port:
              number: 80
